--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "gm": "^1.23.1",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.3",
     "grunt-babel": "^7.0.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^2.0.0",
+    "grunt-contrib-uglify": "^3.3.0",
     "grunt-mkdir": "~0.1.2"
   },
   "dependencies": {
-    "grunt-responsive-images": "^0.1.6",
+    "grunt-responsive-images": "^1.10.1",
     "hoek": "^5.0.3"
   },
   "babel": {
