--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.24.4",
+    "eslint": "^4.19.1",
     "gm": "^1.23.1",
     "grunt": "^1.0.3",
     "grunt-babel": "^7.0.0",
@@ -18,7 +20,15 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-contrib-uglify": "^3.3.0",
-    "grunt-mkdir": "~0.1.2"
+    "grunt-mkdir": "~0.1.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^4.0.2",
+    "gulp-responsive-images": "0.0.3",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
+    "sass": "^1.6.2"
   },
   "dependencies": {
     "grunt-responsive-images": "^1.10.1",
