--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-responsive-images": "0.0.3",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
+    "idb": "^2.1.3",
     "sass": "^1.6.2"
   },
   "dependencies": {
